--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
