--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "postgres": "^3.4.4",
+    "socket.io": "^4.7.5",
     "tld-extract": "^2.1.0"
   },
   "type": "module",
