--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "node-mailer": "^0.1.1",
     "postgres": "^3.4.4",
     "socket.io": "^4.7.5",
     "tld-extract": "^2.1.0"
