--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.23.0",
+    "axios": "^1.7.3",
+    "axios-cookiejar-support": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
@@ -22,7 +24,8 @@
     "nodemailer": "^6.9.14",
     "postgres": "^3.4.4",
     "socket.io": "^4.7.5",
-    "tld-extract": "^2.1.0"
+    "tld-extract": "^2.1.0",
+    "tough-cookie": "^4.1.4"
   },
   "type": "module",
   "devDependencies": {
